--- a/index.html
+++ b/index.html
@@ -6,19 +6,22 @@
     </head>
     <body>
         <ul>
-            <li><a class="active" href="#home">Home</a></li>
-            <li><a href="#news">News</a></li>
-            <li><a href="#contact">Contact</a></li>
-            <li><a href="#about">About</a></li>
+            <a class="name" href="https://cornerofrandom.github.io">corner of random</a>        
+            <li><a href="#news">random page</a></li>
+            <li><a href="#contact">about</a></li>
+            <li><a href="#about">contact</a></li>
+            <li><a class="active" href="#home">home</a></li>
+
         </ul>
         <center>
             <div class="container">
                 <h2>welcome to the corner of random</h2>
+                <p>This is possibly the most useless website on Earth. Click around to <del>waste your time</del> <em>ahem</em>, I mean<em> entertain yourself</em>.</p>
                 <p id="changeme">A paragraph.</p>
-                <button onclick="change()" id="changebtn">Change the paragraph</button>
-                <button onclick="changeback()" id="changeback">Change back</button>
-                <button onclick="unr()" id="unrb">Unicorns & Rainbows</button>
-                <img src="unicornsnrainbows.jpg" id="unr">
+                <button class="visible" onclick="change()" id="changebtn">Change the paragraph</button>
+                <button class="visible" onclick="changeback()" id="changeback">Change back</button>
+                <button class="visible" onclick="unr()" id="unrb">Unicorns & Rainbows</button>
+                <button onclick="unrh()" id="unrh"><img src="unicornsnrainbows.jpg" id="unr"></button>
             </div>
         </center>
         
