--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     </head>
     <body>
         <ul>
-            <a class="name" href="https://cornerofrandom.github.io">corner of random</a>        
-            <li><a href="#news">random page</a></li>
-            <li><a href="#contact">about</a></li>
-            <li><a href="#about">contact</a></li>
-            <li><a class="active" href="#home">home</a></li>
+            <a class="name" href="">corner of random</a>        
+            <li><a href="https://cornerofrandom.github.io/error.html">random page</a></li>
+            <li><a href="https://cornerofrandom.github.io/error.html">about</a></li>
+            <li><a href="#https://cornerofrandom.github.io/about.html">contact</a></li>
+            <li><a class="active" href="">home</a></li>
 
         </ul>
         <center>
