--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <ul>
             <a class="name" href="">corner of random</a>        
             <li><a href="https://cornerofrandom.github.io/error.html">random page</a></li>
-            <li><a href="https://cornerofrandom.github.io/error.html">about</a></li>
+            <li><a href="https://cornerofrandom.github.io/about.html">about</a></li>
             <li><a href="#https://cornerofrandom.github.io/about.html">contact</a></li>
             <li><a class="active" href="">home</a></li>
 
