--- a/test.html
+++ b/test.html
@@ -28,6 +28,8 @@ editableDiv.addEventListener("change", function() { // this function will be exe
     if (storageAvailable("localStorage")) { // check for storage availability
         divcontent = editableDiv.innerHTML; // get contents of the editableDiv
         window.localStorage.setItem("divcontent", divcontent); // add them to the localStorage
+        var d = new Date()
+        document.getElementById("result").innerHTML="edited "+d;
     } else { // if localStorage is not supported, notify the user about it
         alert("Your browser does not support localStorage or you disabled it, the things you entered could not be saved !");
     }
@@ -36,12 +38,16 @@ editableDiv.addEventListener("change", function() { // this function will be exe
 editableDiv = document.getElementById("print"); // get the editable div
 
 
-window.addEventListener("load", function() { // this function is executed whenever the page is loaded
+window.addEventListener('load', function() { // this function is executed whenever the page is loaded
     if (storageAvailable("localStorage")) { // check for storage availability
         divcontent = window.localStorage.getItem("divcontent"); // get the saved divcontent
         if (divcontent === null) { // if the user never modified the divcontent before (or cleaned his localStorage), do nothing
+            var d = new Date()
+        document.getElementById("result").innerHTML="loaded "+d;
         } else {
             editableDiv.innerHTML = divcontent; // write it into the editableDiv
+            var d = new Date()
+        document.getElementById("result").innerHTML="loaded "+d;
         }
     } else { // if strorage not available, notify the user
         alert("Your browser does not support localStorage or you disabled it, your previous work could not be restored !");
@@ -51,3 +57,4 @@ window.addEventListener("load", function() { // this function is executed whenev
 
 </body>
 </html>
+
