--- a/error.html
+++ b/error.html
@@ -9,7 +9,7 @@
             <a class="name" href="https://cornerofrandom.github.io">corner of random</a>        
             <li><a href="https://cornerofrandom.github.io/error.html">random page</a></li>
             <li><a href="https://cornerofrandom.github.io/about.html">about</a></li>
-            <li><a href="https://cornerofrandom.github.io/error.html">contact</a></li>
+            <li><a href="https://cornerofrandom.github.io/biomaker.html">biomaker</a></li>
             <li><a href="https://cornerofrandom.github.io">home</a></li>
 
         </ul>
