--- a/test.html
+++ b/test.html
@@ -1,10 +1,21 @@
 <!DOCTYPE html>
 <html>
-<body>
+    <head>
+        <style>
+            @import url("https://fonts.googleapis.com/css?family=Ubuntu");
+            #result {
+                font-family: 'Ubuntu', Calibri, 'Gill Sans', sans-serif;
+                font-size:12px;
+            }
+        </style>
+    </head>
+<body onload='retrieve()'>
 
-<div contenteditable="true" id="print">edit me</div>
-
-<div id="result">not edited yet.</div>
+<div contenteditable="true" id="print"><p>edit me</p></div>
+<p></p>
+<button onclick='save()'>save!</button>
+<p></p>
+<div id="result"><br>not edited yet.</div>
 
 <script>
 function storageAvailable(type) {
@@ -22,37 +33,38 @@ function storageAvailable(type) {
 }
 
 //editableDiv = document.getElementById("edited"); // get the editable div
-editableDiv = document.getElementById("print"); // get the editable div
+ // get the editable div
 
-editableDiv.addEventListener("change", function() { // this function will be executed whenever the content of the editableDiv changes
-    if (storageAvailable("localStorage")) { // check for storage availability
+function save() { // this function will be executed whenever the content of the editableDiv changes
+    if (storageAvailable("localStorage")) {
+        editableDiv = document.getElementById("print"); // check for storage availability
         divcontent = editableDiv.innerHTML; // get contents of the editableDiv
         window.localStorage.setItem("divcontent", divcontent); // add them to the localStorage
         var d = new Date()
-        document.getElementById("result").innerHTML="edited "+d;
+        document.getElementById("result").innerHTML="saved "+d;
     } else { // if localStorage is not supported, notify the user about it
         alert("Your browser does not support localStorage or you disabled it, the things you entered could not be saved !");
     }
-});
-
-editableDiv = document.getElementById("print"); // get the editable div
+}
 
 
-window.addEventListener('load', function() { // this function is executed whenever the page is loaded
-    if (storageAvailable("localStorage")) { // check for storage availability
+
+ function retrieve() { // this function is executed whenever the page is loaded
+    if (storageAvailable("localStorage")) {
+        editableDiv = document.getElementById("print"); // check for storage availability
         divcontent = window.localStorage.getItem("divcontent"); // get the saved divcontent
         if (divcontent === null) { // if the user never modified the divcontent before (or cleaned his localStorage), do nothing
             var d = new Date()
-        document.getElementById("result").innerHTML="loaded "+d;
+        document.getElementById("result").innerHTML="loaded "+d+" <br> no saved data."
         } else {
             editableDiv.innerHTML = divcontent; // write it into the editableDiv
             var d = new Date()
-        document.getElementById("result").innerHTML="loaded "+d;
+        document.getElementById("result").innerHTML="loaded "+d+"<br> saved data was loaded.";
         }
     } else { // if strorage not available, notify the user
         alert("Your browser does not support localStorage or you disabled it, your previous work could not be restored !");
     }
-});
+ }
 </script>
 
 </body>
