--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <body>
         <ul>
             <a class="name" href="">corner of random</a>        
-            <li><a href="https://cornerofrandom.github.io/error.html">random page</a></li>
-            <li><a href="https://cornerofrandom.github.io/about.html">about</a></li>
-            <li><a href="https://cornerofrandom.github.io/biomaker.html">biomaker</a></li>
+            <li><a href="https://cornerofrandom.github.io/error">random page</a></li>
+            <li><a href="https://cornerofrandom.github.io/about">about</a></li>
+            <li><a href="https://cornerofrandom.github.io/biocard">biomaker</a></li>
             <li><a class="active" href="">home</a></li>
 
         </ul>
