--- a/about.html
+++ b/about.html
@@ -7,9 +7,9 @@
     <body>
         <ul>
             <a class="name" href="https://cornerofrandom.github.io">corner of random</a>        
-            <li><a href="https://cornerofrandom.github.io/error.html">random page</a></li>
+            <li><a href="https://cornerofrandom.github.io/error">random page</a></li>
             <li><a class="active" href="">about</a></li>
-            <li><a href="https://cornerofrandom.github.io/error.html">biomaker</a></li>
+            <li><a href="https://cornerofrandom.github.io/biocard">biomaker</a></li>
             <li><a href="https://cornerofrandom.github.io">home</a></li>
 
         </ul>
