--- a/index.html
+++ b/index.html
@@ -1,27 +1,34 @@
 <!doctype HTML>
 <html>
     <head>
-        <title>corner of random</title>
+        <title>corner of random - about</title>
         <link rel="stylesheet" href="stylesheet.css">
     </head>
     <body>
         <ul>
-            <a class="name" href="">corner of random</a>        
+            <a class="name" href="https://cornerofrandom.github.io">corner of random</a>        
             <li><a href="https://cornerofrandom.github.io/error">random page</a></li>
-            <li><a href="https://cornerofrandom.github.io/about">about</a></li>
+            <li><a class="active" href="">about</a></li>
             <li><a href="https://cornerofrandom.github.io/biocard">biomaker</a></li>
-            <li><a class="active" href="">home</a></li>
+            <li><a href="https://cornerofrandom.github.io">home</a></li>
 
         </ul>
         <center>
             <div class="container">
-                <h2>welcome to the corner of random</h2>
-                <p>This is possibly the most useless website on Earth. Click around to <del>waste your time</del> <em>ahem</em>, I mean<em> entertain yourself</em>.</p>
-                <p id="changeme">A paragraph.</p>
-                <button class="visible" onclick="change()" id="changebtn">Change the paragraph</button>
-                <button class="visible" onclick="changeback()" id="changeback">Change back</button>
-                <button class="visible" onclick="unr()" id="unrb">Unicorns & Rainbows</button>
-                <button onclick="unrh()" id="unrh"><img src="unicornsnrainbows.jpg" id="unr"></button>
+                <h2>about the corner of random</h2>
+                <p>As stated on the homepage, this is a very very useless website. It has no purpose whatsoever.
+                    <br>Hopefully, you'll have fun looking
+                    around the website. There's not much to do,
+                    though we recommend you take the 
+                    <a href="#">site tour</a> if you're bored
+                    and want some (bad) entertainment. 
+                    We hope you enjoy your stay at 
+                    the 5-star time-wasting website,
+                    the corner of random!</p>
+                <h3>corner of random contributors</h5>
+                <p>Special thanks to.. <br><br>Summer (summer#9656)
+                <br>
+            </p>
             </div>
         </center>
         
