--- a/about.html
+++ b/about.html
@@ -26,7 +26,9 @@
                     the 5-star time-wasting website,
                     the corner of random!</p>
                 <h3>corner of random contributors</h5>
-                <p>Special thanks to.. <br><br>jk no one helped</p>
+                <p>Special thanks to.. <br><br>Summer (summer#9656)
+                <br>
+            </p>
             </div>
         </center>
         
