--- a/about.html
+++ b/about.html
@@ -26,7 +26,10 @@
                     the 5-star time-wasting website,
                     the corner of random!</p>
                 <h3>corner of random contributors</h5>
-                <p>Special thanks to.. <br><br>Summer (summer#9656)
+                <p>Special thanks to.. <br><br>Summer (summer#9656) - ideas
+                    <br>Ethiera#7969 - biomaker 
+                    <br><br>
+                    <br>Claire (waclyu#5448) - creator
                 <br>
             </p>
             </div>
