--- a/about.html
+++ b/about.html
@@ -2,18 +2,18 @@
 <html>
     <head>
         <title>corner of random - about</title>
-        <!--<link rel="stylesheet" href="stylesheet.css">-->
-        <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
-        <script>
-            $(function(){
-               $("#navbar").load("navbar.html"); 
-            });
-       </script>
-
+        <link rel="stylesheet" href="stylesheet.css">
     </head>
     <body>
-        <div id="navbar">hi</div>
-        <!--<center>
+        <ul>
+            <a class="name" href="https://cornerofrandom.github.io">corner of random</a>        
+            <li><a href="https://cornerofrandom.github.io/error">random page</a></li>
+            <li><a class="active" href="">about</a></li>
+            <li><a href="https://cornerofrandom.github.io/biocard">biomaker</a></li>
+            <li><a href="https://cornerofrandom.github.io">home</a></li>
+
+        </ul>
+        <center>
             <div class="container">
                 <h2>about the corner of random</h2>
                 <p>As stated on the homepage, this is a very very useless website. It has no purpose whatsoever.
@@ -36,10 +36,7 @@
         </center>
         
         
-
-
-        <!--<script src="script.js"></script>-->
-
+        <script src="script.js"></script>
 
     </body>
 </html>
