--- a/about.html
+++ b/about.html
@@ -3,16 +3,12 @@
     <head>
         <title>corner of random - about</title>
         <link rel="stylesheet" href="stylesheet.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <style>#abt{background-color: rgba(255, 205, 238, 0.7);}</style>
     </head>
     <body>
-        <ul>
-            <a class="name" href="https://cornerofrandom.github.io">corner of random</a>        
-            <li><a href="https://cornerofrandom.github.io/error">random page</a></li>
-            <li><a class="active" href="">about</a></li>
-            <li><a href="https://cornerofrandom.github.io/biocard">biomaker</a></li>
-            <li><a href="https://cornerofrandom.github.io">home</a></li>
-
-        </ul>
+        <div id="navbar"></div>
+        <script src = "navbar.js"></script>
         <center>
             <div class="container">
                 <h2>about the corner of random</h2>
@@ -20,7 +16,7 @@
                     <br>Hopefully, you'll have fun looking
                     around the website. There's not much to do,
                     though we recommend you take the 
-                    <a href="#">site tour</a> if you're bored
+                    <a href="./error.html">site tour</a> if you're bored
                     and want some (bad) entertainment. 
                     We hope you enjoy your stay at 
                     the 5-star time-wasting website,
@@ -36,7 +32,10 @@
         </center>
         
         
+
+
         <script src="script.js"></script>
+
 
     </body>
 </html>
