--- a/error.html
+++ b/error.html
@@ -3,21 +3,16 @@
     <head>
         <title>lost in randomness</title>
         <link rel="stylesheet" href="stylesheet.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
-        <ul>
-            <a class="name" href="https://cornerofrandom.github.io">corner of random</a>        
-            <li><a href="https://cornerofrandom.github.io/error">random page</a></li>
-            <li><a href="https://cornerofrandom.github.io/about">about</a></li>
-            <li><a href="https://cornerofrandom.github.io/biocard">biomaker</a></li>
-            <li><a href="https://cornerofrandom.github.io">home</a></li>
-
-        </ul>
+       <div id="navbar"></div>
+        <script src = "navbar.js"></script>
         <center>
             <div class="container">
                 <h2>We fell into the random-verse :(</h2>
                 <p>We didn't find the page you are looking for. You may have followed a broken link, or you may be trying to access a page that isn't published yet. </p>
-                <a href="https://cornerofrandom.github.io" class="ref">return to the corner of random</a>
+                <a href="./index.html" class="ref">return to the corner of random</a>
             </div>
         </center>
         
