--- a/error.html
+++ b/error.html
@@ -4,6 +4,7 @@
         <title>lost in randomness</title>
         <link rel="stylesheet" href="stylesheet.css">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta http-equiv="Refresh" content="0; url='./comingsoon.html'" />
     </head>
     <body>
        <div id="navbar"></div>
