--- a/arysia/arysia.html
+++ b/arysia/arysia.html
@@ -9,7 +9,7 @@
    <!-- Created with Inkscape (http://www.inkscape.org/) -->
 
    <center>
-      <div id="main" class="inactive">
+      <div id="main" class="inactive website">
          <svg class="logo" display="block" ; width="20mm" height="20mm" viewBox="0 0 90 120" version="1.1" id="arysia"
             sodipodi:docname="drawing.svg" inkscape:version="1.1 (c68e22c387, 2021-05-23)"
             xmlns:inkscape="http://www.inkscape.org/namespaces/inkscape"
@@ -217,7 +217,7 @@
         Your screen is too small! <br><br> This website is optimized for large screens (computers and tablets). A mobile-friendly version is still under development.
          <br><br> Thanks for your visit. If you'd like to explore, please use a larger screen. <br>&lt;3
       </div>
-      <div id="magicInfo" class="inactive">
+      <div id="magicInfo" class="inactive website">
          <svg 
          width="25mm"
          height="30mm"
@@ -405,7 +405,7 @@
             <a href="#"><img src="arysia.svg" class="imgLink" onclick="displayHome();"></a>
         </div>
           </div>
-          <div id="nationsInfo" class="inactive">
+          <div id="nationsInfo" class="inactive website">
             
             <!--COPY AND PASTE SVG HERE-->
             <div class="text">
