--- a/arysia/arysia.html
+++ b/arysia/arysia.html
@@ -641,7 +641,7 @@ xmlns:svg="http://www.w3.org/2000/svg">
                      <div class="clearfix col-xs-4 col-sm-4 col-md-4">
 
                         <p class="title">Ameris</p>
-                        <p class="colText">Founded by Syliva Asterin Amersalles, House Ameris focuses on control and resistance (elements of earth, air, water, skills relating to healing). Members of this house are known as the "Following of Freedom".
+                        <p class="colText">Founded by Sylvia Asterin Amersalles, House Ameris focuses on control and resistance (elements of earth, air, water, skills relating to healing). Members of this house are known as the "Following of Freedom".
 
                         </p>
                      </div>
