--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div class="container">
                 <h2>welcome to the corner of random</h2>
                 <p>This is possibly the most useless website on Earth. Click around to <del>waste your time</del> <em>ahem</em>, I mean<em> entertain yourself</em>.
-                <br><br> please note that some of these will only work on computer.</p>
+                <br><br> please note that some of these will only work on a computer. A mobile friendly version of the website is still under development.</p>
                 <p id="changeme">A paragraph.</p>
                 <button class="visible" onclick="change()" id="changebtn">Change the paragraph</button>
                 <button class="visible" onclick="changeback()" id="changeback">Change back</button>
