--- a/comingsoon.html
+++ b/comingsoon.html
@@ -16,7 +16,7 @@
             <div class="inner">
                <p id="text01">Coming Soon</p>
                 <p id="text02">
-                    The feature you are looking for is not yet available. Perhaps it will be here if you come back later.
+                    Unfortunately, development of this website has slowed down to a crawl due to the school year. The feature you are looking for is not yet available. Perhaps it will be here if you come back later.
                 </p>
                 <hr>
                 <br>
