--- a/mt-practice/index.html
+++ b/mt-practice/index.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="stylesheet.css">
     </head>
     <body onload="newQuestion()">
-        <center>
+        <div class='outline'>
         <script src="mt.js"></script>
         <p>***attention: please be aware that the program may mark you wrong if you make small punctuation errors***</p>
         <p class='label'>Type the definition for rule:</p>
@@ -25,6 +25,6 @@
     
             <p id="feedback" class='change'></p>
         </div>
-        </center>
+        </div>
     </body>
 </html>
