--- a/mt-practice/index.html
+++ b/mt-practice/index.html
@@ -8,6 +8,7 @@
         <div class='outline'>
         <script src="mt.js"></script>
         <p>***attention: please be aware that the program may mark you wrong if you make small punctuation errors***</p>
+        <p>*hint: do not include anything with parenthesis*</p>
         <p class='label'>Type the definition for rule:</p>
         <p id="rule" class='change'></p>
         <p id="index" style='display: none'></p>
