--- a/mt-practice/ordered.html
+++ b/mt-practice/ordered.html
@@ -6,7 +6,7 @@
     </head>
     <body onload="newQuestion()">
         <div class='outline'>
-        <script src="mt2.js"></script>
+        <script src="ordered.js"></script>
         <p>***attention: please be aware that the program may mark you wrong if you make small punctuation errors***</p>
           <p><a href='./index.html'>randomized practice site</a> <br> (this site will go in order and loop back once you have gone through all of the rules)</p>
         <p>*hint: do not include anything with parenthesis*</p>
