--- a/mt-practice/ordered.html
+++ b/mt-practice/ordered.html
@@ -12,7 +12,7 @@
         <p>*hint: do not include anything with parenthesis*</p>
         <p class='label'>Type the definition for rule:</p>
         <p id="rule" class='change'></p>
-        <p id="index" style='display: none'>0</p>
+        <p id="index">0</p>
         <div contenteditable id="in" class='userinput'></div>
         <div style='height:5px;'></div>
         <button onclick="getText()">submit</button>
